# RAGBaseLearner

./: README.md  pyproject.toml
BCEmbedding/BCEmbedding.egg-info/: PKG-INFO
BCEmbedding/BCEmbedding/models/: embedding.py  reranker.py  utils.py
bce_embedding/: bce_embeddings.py  rerank.py  sentence_transforms.py  transforms_rerank.py
compute_similarity/: __init__.py  flag_embedding.py  huggingface_embedding.py  langchain_embedding.py  transform_embedding.py
download_model/: __init__.py
langchain_bcembedding/: demo.py
retriever/: custom_bm25.py  dense_retriever.py
