[project]
name = "ragbaselearner"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "flagembedding>=1.3.5",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "modelscope>=1.30.0",
    "scikit-learn>=1.7.2",
    "transformers>=4.56.1",
]
